WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
247908
With UI-side compositing, there is an assertion failure in `fast/scrolling/keyboard-scrolling-distance-downArrow.html`
https://bugs.webkit.org/show_bug.cgi?id=247908
Summary
With UI-side compositing, there is an assertion failure in `fast/scrolling/ke...
Richard Robinson
Reported
2022-11-14 11:07:31 PST
rdar://102329463
Attachments
Add attachment
proposed patch, testcase, etc.
Richard Robinson
Comment 1
2022-11-14 11:12:40 PST
Pull request:
https://github.com/WebKit/WebKit/pull/6482
EWS
Comment 2
2022-11-14 20:13:18 PST
Committed
256683@main
(3825a94eb763): <
https://commits.webkit.org/256683@main
> Reviewed commits have been landed. Closing PR #6482 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug