Cherry-pick 256683@main (3825a94eb763). https://bugs.webkit.org/show_bug.cgi?id=247908

With UI-side compositing, there is an assertion failure in `fast/scrolling/keyboard-scrolling-distance-downArrow.html`
    https://bugs.webkit.org/show_bug.cgi?id=247908
    rdar://102329463

    Reviewed by Simon Fraser.

    The `ScrollDirection` enum was never given an `EnumTraits` specialization which
    led to a non-valid `ScrollDirection` value being used in a switch statement
    and not being handled, therefore leading to an assertion.

    * Source/WebCore/platform/ScrollTypes.h:

    Canonical link: https://commits.webkit.org/256683@main